Updated package.json: dev dependencies

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "main": "bencode.js",
   
   "devDependencies": {
-    "benchmark": ""
+    "benchmark": "",
+    "bencoding": "",
+    "dht-bencode": "",
+    "bncode": ""
   },
   
   "repository": {
