Updated benchmark & package.json: Added @indutny's dht.js to benchmark

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "benchmark": "",
     "bencoding": "",
     "dht-bencode": "",
-    "bncode": ""
+    "bncode": "",
+    "dht.js": ""
   },
   
   "repository": {
