--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bencode",
   "version": "0.4.0",
+  "license": "MIT",
   "description": "Bencode de/encoder",
   "keywords": [ "torrent", "bittorrent", "bencode", "bdecode", "bencoding" ],
   
