Updated package.json: Adjusted $ npm test command

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mocha": ""
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha tests/*.test.js"
+    "test": "./node_modules/.bin/mocha"
   },
 
   "repository": {
