--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dht-bencode": "",
     "bncode": "",
     "dht.js": "",
-    "tape": "^2"
+    "tape": "~2.12"
   },
   "scripts": {
     "test": "node node_modules/tape/bin/tape test/*.test.js",
@@ -40,5 +40,18 @@
   },
   "bugs": {
     "url": "https://github.com/themasch/node-bencode/issues"
-  }
+  },
+  "testling": {
+    "files": "test/*.test.js",
+    "browsers": [
+      "ie/6..latest",
+      "chrome/22..latest",
+      "firefox/16..latest",
+      "safari/latest",
+      "opera/11.0..latest",
+      "iphone/6..latest",
+      "ipad/6..latest",
+      "android-browser/latest"
+    ]
+  },
 }
