--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     },
     {
       "name": "Jonas Hermsmeier",
-      "email": "jonas@hojoki.com"
+      "email": "jhermsmeier@gmail.com",
+      "url": "https://jhermsmeier.de/"
     }
   ],
   "main": "bencode.js",
@@ -32,8 +33,8 @@
     "tape": "~4.4.0"
   },
   "scripts": {
-    "test": "node node_modules/.bin/tape test/*.test.js | node node_modules/.bin/tap-spec",
-    "bench": "node node_modules/.bin/matcha benchmark/*.js"
+    "test": "tape test/*.test.js | tap-spec",
+    "bench": "matcha benchmark/*.js"
   },
   "repository": {
     "type": "git",
