--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
   "name": "bencode",
   "version": "0.7.0",
-  "license": "MIT",
-  "description": "Bencode de/encoder",
+  "description": "Bencode decoder/encoder",
   "keywords": [
-    "torrent",
-    "bittorrent",
-    "bencode",
     "bdecode",
-    "bencoding"
+    "bencode",
+    "bencoding",
+    "bittorrent",
+    "torrent"
   ],
+  "bugs": {
+    "url": "https://github.com/themasch/node-bencode/issues"
+  },
+  "license": "MIT",
   "contributors": [
-    {
-      "name": "Mark Schmale",
-      "email": "masch@masch.it",
-      "url": "http://masch.it/"
-    },
-    {
-      "name": "Jonas Hermsmeier",
-      "email": "jhermsmeier@gmail.com",
-      "url": "https://jhermsmeier.de/"
-    }
+    "Mark Schmale <masch@masch.it> (http://masch.it/)",
+    "Jonas Hermsmeier <jhermsmeier@gmail.com> (https://jhermsmeier.de/)"
   ],
-  "main": "bencode.js",
+  "files": [
+    "lib"
+  ],
+  "main": "./lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/themasch/node-bencode.git"
+  },
+  "scripts": {
+    "bench": "matcha",
+    "coverage": "nyc npm run unit",
+    "lint": "standard",
+    "test": "npm run lint && npm run unit",
+    "unit": "tape test/*.js"
+  },
+  "dependencies": {
+    "varstruct": "^5.1.0",
+    "varstruct-match": "^3.1.0"
+  },
   "devDependencies": {
     "bencoding": "latest",
     "bncode": "latest",
     "dht-bencode": "latest",
     "dht.js": "latest",
-    "matcha": "~0.7.0",
-    "tap-spec": "~4.1.0",
-    "tape": "~4.5.1"
-  },
-  "scripts": {
-    "test": "tape test/*.test.js | tap-spec",
-    "bench": "matcha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/themasch/node-bencode.git"
-  },
-  "bugs": {
-    "url": "https://github.com/themasch/node-bencode/issues"
+    "matcha": "^0.7.0",
+    "tape": "^4.5.1"
   },
   "testling": {
-    "files": "test/*.test.js",
+    "files": "test/*.js",
     "browsers": [
       "ie/6..latest",
       "chrome/22..latest",
