--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
-language: node_js
 sudo: false
+language: node_js
 node_js:
-  - 0.10
-  - 0.11
-  - 0.12
-  - 4
-  - stable
+  - "0.10"
+  - "0.11"
+  - "0.12"
+  - "4"
+  - "5"
+matrix:
+  include:
+    - node_js: "4"
+      env: TEST_SUITE=lint
+env:
+  - TEST_SUITE=unit
+script: npm run-script $TEST_SUITE
