--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "bencode",
-  "version": "0.9.0",
-  "license": "MIT",
   "description": "Bencode de/encoder",
-  "keywords": [
-    "torrent",
-    "bittorrent",
-    "bencode",
-    "bdecode",
-    "bencoding"
-  ],
+  "version": "0.9.0",
+  "bugs": {
+    "url": "https://github.com/themasch/node-bencode/issues"
+  },
   "contributors": [
     {
       "name": "Mark Schmale",
@@ -22,7 +17,6 @@
       "url": "https://jhermsmeier.de/"
     }
   ],
-  "main": "bencode.js",
   "devDependencies": {
     "bencoding": "latest",
     "bncode": "latest",
@@ -32,16 +26,22 @@
     "tap-spec": "~4.1.0",
     "tape": "~4.5.1"
   },
-  "scripts": {
-    "test": "tape test/*.test.js | tap-spec",
-    "bench": "matcha"
-  },
+  "keywords": [
+    "bdecode",
+    "bencode",
+    "bencoding",
+    "bittorrent",
+    "torrent"
+  ],
+  "license": "MIT",
+  "main": "bencode.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/themasch/node-bencode.git"
   },
-  "bugs": {
-    "url": "https://github.com/themasch/node-bencode/issues"
+  "scripts": {
+    "bench": "matcha",
+    "test": "tape test/*.test.js | tap-spec"
   },
   "testling": {
     "files": "test/*.test.js",
