move `main` entrypoint into ./lib
this allows us to require only parts of the library by doing a call like
`require('bencode/encode')`

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "torrent"
   ],
   "license": "MIT",
-  "main": "bencode.js",
+  "main": "lib",
   "repository": {
     "type": "git",
     "url": "git://github.com/themasch/node-bencode.git"
