Support Node 0.10, 0.12, and early Node 4
We support these node versions in `bittorrent-dht` and they lack the
new Buffer.from, etc. methods.

`safe-buffer` provides a buffer with the new methods, or does nothing
if the node version is new enough.

--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "bench": "matcha",
     "style": "standard --fix",
     "test": "standard && tape test/*.test.js | tap-spec"
+  },
+  "dependencies": {
+    "safe-buffer": "^5.1.1"
   }
 }
