--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: node_js
-sudo: false
 node_js:
   - stable
+  - 8
   - 6
   - 4
-  - "0.12"
-  - "0.10"
-branches:
-  only:
-    - master
-script: npm test
+script:
+  - npm test
