--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "nanobench": "^2.1.0",
     "standard": "^9.0.2",
     "tap-spec": "~4.1.0",
-    "tape": "~4.6.0"
+    "tape": "^4.6.3"
   },
   "keywords": [
     "bdecode",
