--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "dht-bencode": "latest",
     "dht.js": "latest",
     "nanobench": "^2.1.0",
-    "standard": "^9.0.2",
-    "tap-spec": "~4.1.0",
+    "standard": "^12.0.1",
+    "tap-spec": "^5.0.0",
     "tape": "^4.6.3"
   },
   "keywords": [
