perf: deprecate buffer

--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   },
   "release": {
     "extends": "@webtorrent/semantic-release-config"
+  },
+  "dependencies": {
+    "uint8-util": "^2.1.6"
   }
 }
