--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "node": ">=12.20.0"
   },
   "exports": {
-    "import": "./lib/index.js"
+    "import": "./index.js"
   },
   "repository": {
     "type": "git",
