test: Add Browserify tests (#66)
* Update package.json: Add browserify dev dep & scripts

* Remove Makefile

* Add test/index.html

* Update browserify

---------

Co-authored-by: Mark Schmale <m.schmale@uniorg.de>
Co-authored-by: Alex <alxmorais8@msn.com>

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@webtorrent/semantic-release-config": "1.0.9",
     "bencoding": "latest",
     "bncode": "latest",
+    "browserify": "^17.0.0",
     "btparse": "latest",
     "dht-bencode": "latest",
     "dht.js": "latest",
@@ -51,6 +52,9 @@
   },
   "scripts": {
     "benchmark": "nanobench benchmark/*.js",
+    "bundle": "mkdir -p dist && npm run bundle:lib && npm run bundle:test",
+    "bundle:lib": "browserify lib/index.js -s bencode -o dist/bencode.js",
+    "bundle:test": "browserify test/*.test.js -o dist/tests.js",
     "style": "standard --fix",
     "test": "standard && tape test/*.test.js | tap-spec"
   },
