--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "btparse": "latest",
     "dht-bencode": "latest",
     "dht.js": "latest",
-    "nanobench": "3.0.0",
     "semantic-release": "21.1.1",
     "standard": "17.1.0",
     "tap-spec": "5.0.0",
-    "tape": "5.6.6"
+    "tape": "5.6.6",
+    "tinybench": "^2.5.0"
   },
   "keywords": [
     "bdecode",
@@ -51,7 +51,7 @@
     "url": "git://github.com/webtorrent/node-bencode.git"
   },
   "scripts": {
-    "benchmark": "nanobench benchmark/*.js",
+    "benchmark": "node benchmark/all.js",
     "bundle": "mkdir -p dist && npm run bundle:lib && npm run bundle:test",
     "bundle:lib": "browserify lib/index.js -s bencode -o dist/bencode.js",
     "bundle:test": "browserify test/*.test.js -o dist/tests.js",
